# QuestChain

./: .gitignore  404.html  LICENSE  README.md  index.html  install.ps1  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
agent-classes/: index.html
capabilities/: index.html
cli-reference/: index.html
docs/: agent-classes.md  capabilities.md  cli-reference.md  index.md  install.md  models.md  progression.md  quest-system.md  telegram.md
genie/: __init__.py  __main__.py  agent.py  agents.py  busy_work.py  cache.py  cli.py  config.py  models.py  onboarding.py  scheduler.py  telegram.py
genie/memory/: __init__.py  store.py
genie/tools/: __init__.py  claude_code.py  cron.py  speak.py  web_browse.py  web_search.py
install/: index.html
models/: index.html
progression/: index.html
quest-system/: index.html
questchain/: __init__.py  __main__.py  agent.py  agents.py  busy_work.py  cache.py  cli.py  config.py  models.py  onboarding.py  progression.py  quest_meta.py  quest_runner.py  scheduler.py  stats.py  stt.py  telegram.py  voice_tts.py
questchain/engine/: __init__.py  agent.py  context.py  model.py  skills.py  tools.py  workspace_tools.py
questchain/engine/builtins/: __init__.py  filesystem.py  planning.py  shell.py
questchain/gateway/: __init__.py  events.py  server.py
questchain/memory/: __init__.py  store.py
questchain/static/: app.js  index.html
questchain/tools/: __init__.py  claude_code.py  cron.py  speak.py  web_browse.py  web_search.py
scripts/: benchmark.py
search/: search_index.json
skills/claude-code/: SKILL.md
skills/cron-jobs/: SKILL.md
skills/fitness-tracker/: SKILL.md
skills/overnight-agent/: SKILL.md
telegram/: index.html
tests/: test_benchmark.py  test_cache.py  test_config.py  test_models.py
