[project]
name = "genie"
version = "0.1.0"
description = "A terminal-based AI agent powered by local Ollama models and LangGraph Deep Agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents",
    "langgraph",
    "langchain-ollama",
    "langchain-community",
    "tavily-python",
    "rich",
    "prompt-toolkit",
    "python-dotenv",
    "langgraph-checkpoint-sqlite",
    "langchain-tavily>=0.2.17",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10,<4",
    "kokoro-onnx",
    "sounddevice",
]

[project.scripts]
genie = "genie.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["genie*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
